# LoRa_LoraWAN

./: README.md
Edizione italiana/: Read.me
Edizione italiana/FRITZING_LORA_END_DEVICE/: LORA_END_DEVICE_41x35.fzz
Edizione italiana/FRITZING_LORA_END_DEVICE/FILE_GERBER/: LORA_END_DEVICE_41x35_contour.gm1  LORA_END_DEVICE_41x35_drill.txt  LORA_END_DEVICE_41x35_pnp.txt
Edizione italiana/NODE-RED/: NEW_TTN.json
Edizione italiana/Progetto Dragino LoRa Shield/LoRaReceiverCallback_ARDUINO_LCD/: LoRaReceiverCallback_ARDUINO_LCD.ino
Edizione italiana/Progetto Dragino LoRa Shield/LoRaSender_ARDUINO_LM35/: LoRaSender_ARDUINO_LM35.ino
English Edition/: README.md
English Edition/CHAPTER_10/NODE-RED_flow/: TTN GPS TRACKER.json
English Edition/CHAPTER_10/ttn-otaa-lorawan-gps-tracker/: ttn-otaa-lorawan-gps-tracker.ino
English Edition/CHAPTER_4/: Arduino Serial Monitor Sketch.txt
English Edition/CHAPTER_4/Arduino_Serial_Monitor/: Arduino_Serial_Monitor.ino
English Edition/CHAPTER_4/FRITZING_LORA_END_DEVICE/: RFM69.fzpz
English Edition/CHAPTER_5/otaa_temperature_led/: CMakeLists.txt  config.h  main.c
English Edition/CHAPTER_6/TTN_payload_formats/: payload_formatter_dht_ldr.txt  payload_formatter_hello_world.txt
English Edition/CHAPTER_8/: flows.json
English Edition/CHAPTER_8/C/test/button/: CMakeLists.txt  button.c
English Edition/CHAPTER_8/C/test/hello_world/: CMakeLists.txt  hello_world.c
FRITZING_LORA_END_DEVICE/FILE_GERBER/: LORA_END_DEVICE_41x35_copperTop.gtl  LORA_END_DEVICE_41x35_silkTop.gto
Progetto Gateway/MULTI_CHAN/: reset.sh
(+18 files in other folders)
